# XScript2Stdlib

./: .gitmodules  CMakeLists.txt  main.cpp
.github/workflows/: linux-amd64.yml
Share/: Utils.cpp  Utils.hpp
docs/: XScript2Stdlib.md
libarray/: library.cpp  library.h
libbytes/: library.cpp  library.h
liberror/: library.cpp  library.h
libfs/: library.cpp  library.h
libhash/: library.cpp  library.h
libio/: library.cpp  library.h
libmapping/: library.cpp  library.h
libmath/: library.cpp  library.h
libstring/: library.cpp  library.h
libsys/: library.cpp  library.h
libthread/: library.cpp  library.h
